--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
+    "exceljs": "^4.4.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "sqlite3": "^5.1.7",
@@ -18,4 +19,4 @@
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
-} 
+}
