--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
+    "csurf": "^1.10.0",
+    "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.17.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1"
   },
